<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.mrjoshuasperry</groupId>
    <artifactId>mc-plugins</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>

    <repositories>
        <repository>
            <id>papermc</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>
    </repositories>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.papermc.paper</groupId>
                <artifactId>paper-api</artifactId>
                <version>1.21.4-R0.1-SNAPSHOT</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>com.mrjoshuasperry</groupId>
                <!-- Keep in step with mc-utils/pom.xml's own version. A range here
                     resolves against whatever is already in the local repo rather
                     than the version built alongside these plugins. -->
                <artifactId>mc-utils</artifactId>
                <version>1.0.30</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>3.0.0</version>
                <executions>
                    <execution>
                        <id>copy-plugin-to-dist-folder</id>
                        <phase>install</phase>
                        <configuration>
                            <skip>${skip.copy.plugin}</skip>
                            <target>
                                <copy todir="${project.basedir}/../_dist">
                                    <fileset dir="${project.build.directory}">
                                        <include name="*.jar" />
                                        <exclude name="original-*.jar" />
                                    </fileset>
                                </copy>
                            </target>
                        </configuration>
                        <goals>
                            <goal>run</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>copy-plugin-to-dev-server</id>
                        <phase>install</phase>
                        <configuration>
                            <skip>${skip.copy.plugin}</skip>
                            <target>
                                <copy todir="${project.basedir}/../_server/plugins">
                                    <fileset dir="${project.build.directory}">
                                        <include name="*.jar" />
                                        <exclude name="original-*.jar" />
                                    </fileset>
                                </copy>
                            </target>
                        </configuration>
                        <goals>
                            <goal>run</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>setup-server</id>
                        <phase>initialize</phase>
                        <inherited>false</inherited>
                        <configuration>
                            <target>
                                <mkdir dir="${project.basedir}/_server/plugins" />
                                <copy file="${project.basedir}/paper.jar"
                                    todir="${project.basedir}/_server" />
                            </target>
                        </configuration>
                        <goals>
                            <goal>run</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <release>17</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.6.0</version>
                <configuration>
                    <!-- Relocate the bundled mc-utils into a package unique to each
                         plugin. Without this, two plugin jars on one server carry the
                         same mc-utils classes and whichever the shared classloader
                         resolves first wins for both. Each consuming plugin overrides
                         mcutils.shadedPattern; the default identity mapping is a no-op,
                         which is what mc-utils itself and the plugins that don't bundle
                         it need. -->
                    <relocations>
                        <relocation>
                            <pattern>com.mrjoshuasperry.mcutils</pattern>
                            <shadedPattern>${mcutils.shadedPattern}</shadedPattern>
                        </relocation>
                    </relocations>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/resources/</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>

    <profiles>
        <profile>
            <id>survival</id>
            <modules>
                <module>chat</module>
                <module>mc-utils</module>
                <module>pocket-plugins</module>
            </modules>
        </profile>
        <profile>
            <id>creative</id>
            <modules>
                <module>chat</module>
                <module>mc-utils</module>
            </modules>
        </profile>
    </profiles>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <!-- Identity by default so mc-utils and non-consuming plugins are untouched.
             Plugins that bundle mc-utils override this to their own base package. -->
        <mcutils.shadedPattern>com.mrjoshuasperry.mcutils</mcutils.shadedPattern>
    </properties>
</project>